--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Vishruth Rao</title>
-	<link rel="stylesheet" type="test/css" href="../universalStyles.css">
-	<link rel="stylesheet" type="text/css" href="aboutme.css">
+	<title>About Me</title>
+	<link rel="stylesheet" type="test/css" href="../css/universalStyles.css">
+	<link rel="stylesheet" type="text/css" href="../css/aboutme.css">
 </head>
 <body>
-	<a href="welcome.html" id="homepageLink">Vishruth Rao</a>
-	<a href="welcome.html" id="welcomeLink">WELCOME</a>
-	<a href="aboutme.html" id="aboutmeLink">ABOUT ME</a>
-	<a href="projects.html" id="projectsLink">PROJECTS</a>
-	<a href="contact.html" id="contactsLink">CONTACT</a>
+	<a href="../index.html" id="homepageLink">Vishruth Rao</a>
+	<a href="../index.html" id="welcomeLink">WELCOME</a>
+	<a href="index.html" id="aboutmeLink">ABOUT ME</a>
+	<a href="../projects/index.html" id="projectsLink">PROJECTS</a>
+	<h1>All About Me</h1>
+	<p>Hello! My name is Vishruth Rao, and I am a high school student. I am currently a freshman at Eastlake High School, and I am passionate about learning and exploring new things. I have a wide range of interests, including robotics, programming, astronomy/rocketry, math, reading, writing, running and playing music. I am also very active in my school and community. I am involved in several extracurricular activities. I am also a volunteer at my local child clothing donation center, and I try to help out in whatever ways I can. I am passionate about learning, and I always strive to do my best. I am confident that I will be successful in all of my endeavors, and I am excited to see what the future holds.</p>
 </body>
 </html>
