--- a/projects/index.html
+++ b/projects/index.html
@@ -2,14 +2,26 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Vishruth Rao</title>
-	<link rel="stylesheet" href="universalStyles.css">
+	<title>Projects</title>
+	<link rel="stylesheet" type="text/css" href="../css/universalStyles.css">
+	<link rel="stylesheet" type="text/css" href="../css/projects.css">
 </head>
 <body>
-	<a href="welcome.html" id="homepageLink">Vishruth Rao</a>
-	<a href="welcome.html" id="welcomeLink">WELCOME</a>
-	<a href="aboutme.html" id="aboutmeLink">ABOUT ME</a>
-	<a href="projects.html" id="projectsLink">PROJECTS</a>
-	<a href="contact.html" id="contactsLink">CONTACT</a>
+	<a href="../index.html" id="homepageLink">Vishruth Rao</a>
+	<a href="../index.html" id="welcomeLink">WELCOME</a>
+	<a href="../aboutme/index.html" id="aboutmeLink">ABOUT ME</a>
+	<a href="index.html" id="projectsLink">PROJECTS</a>
+	<h1>Projects</h1>
+	<section>I’m thrilled to invite you to explore my skills and projects, and get to know a bit more about me. I give 100% to every new project I take on. It’s my firm belief that a good challenge is a great way to develop and improve, which is why I make a point of seeking out challenges. Please take a moment to look around!</section>
+	<div id="bookReviews">
+		<article id="bookReviewsTitle">Book Reviews</article>
+		<img src="../resources/books.jpg">
+		<p id="bookReviewsPara">I am very fond of reading and reviewing books! I have reviewed at least 12 books and plan on reviewing 50 books in total! If you want to see all my book reviews in one place, please click <a href="https://litpick.com/users/authenticated-user-reviewer/powerlax" target="_blank">here</a>!</p>
+	</div>
+	<div id="pianoCovers">
+		<article id="pianoCoversTitle">Piano Covers</article>
+		<img src="../resources/piano.jpg">
+		<p id="pianoCoverPara">I love to play the the piano! I have been playing the piano for 7 years now and I loved every moment of it. Although my piano teacher gives me many songs to work on, I love to challenge myself by recreating some of my favorite songs into piano covers! If you want to listen to some of them, please click <a href="https://www.youtube.com/channel/UCKf8l3YtIwUTPTRw1owCAyQ" target="_blank">here</a>.</p>
+	</div>
 </body>
 </html>
